# pi

./: readme.md
CalculatePI/: CalculatePI.sln
CalculatePI/CalculatePI/: Program.cs  readme.md
CalculatePI/Intro/: App.axaml  AreaControl.cs  AreaSlide.cs  CircleControl.cs  FinalSide.cs  IPage.cs  ImageSlide.cs  Intro.csproj  MainWindow.axaml.cs  TextControl.cs  TitleSlide.cs
examples/cpp/gareth/: CMakeLists.txt  README.md  main.cpp
